# MISO

./: LICENSE  README.md
FRAMES/OTA_EXPERIMENTS/: COMBINED_MCS_LAB_ENVIROMENT_GR.txt
VIVADO_HLS_FILES/: CFOCddfs.cpp  CFOEcordic.cpp  atan.h  gen_quarter_sin.m  quarter_sin.h  script_CFOCddfs.tcl  script_CFOEcordic.tcl
rfnoc-ORCA_BLOCKS/: CMakeLists.txt  MANIFEST.md  README.md
rfnoc-ORCA_BLOCKS/cmake/Modules/: ORCA_BLOCKSConfig.cmake
rfnoc-ORCA_BLOCKS/docs/: README.ORCA_BLOCKS
rfnoc-ORCA_BLOCKS/docs/doxygen/: Doxyfile.in
rfnoc-ORCA_BLOCKS/docs/doxygen/other/: group_defs.dox  main_page.dox
rfnoc-ORCA_BLOCKS/examples/: BD_GR_BD.grc  BD_read_out_file.m  CFOC_GR_BD.grc  CFOC_read_out_file.m  CIR_GR_BD.grc  CIR_read_out_file.m  PD_GR_BD.grc  PD_read_out_file.m  read_complex_binary.m
rfnoc-ORCA_BLOCKS/grc/: ORCA_BLOCKS_BoundaryDetector.xml  ORCA_BLOCKS_CFOC.xml  ORCA_BLOCKS_CIR.xml  ORCA_BLOCKS_PacketDetector.xml  ORCA_BLOCKS_SymbolTiming.xml
rfnoc-ORCA_BLOCKS/include/ORCA_BLOCKS/: BoundaryDetector.h  BoundaryDetector_block_ctrl.hpp  CFOC.h  CFOC_block_ctrl.hpp  CIR.h  CIR_block_ctrl.hpp  CMakeLists.txt  PacketDetector.h  PacketDetector_block_ctrl.hpp  SymbolTiming.h  SymbolTiming_block_ctrl.hpp  api.h
rfnoc-ORCA_BLOCKS/lib/: BoundaryDetector_block_ctrl_impl.cpp  BoundaryDetector_impl.cc  BoundaryDetector_impl.h  CFOC_block_ctrl_impl.cpp  CFOC_impl.cc  CFOC_impl.h  CIR_block_ctrl_impl.cpp  CIR_impl.cc  CIR_impl.h  CMakeLists.txt  PacketDetector_block_ctrl_impl.cpp  PacketDetector_impl.cc  PacketDetector_impl.h  SymbolTiming_block_ctrl_impl.cpp  SymbolTiming_impl.cc  SymbolTiming_impl.h  qa_ORCA_BLOCKS.cc  qa_ORCA_BLOCKS.h  test_ORCA_BLOCKS.cc
rfnoc-ORCA_BLOCKS/python/: CMakeLists.txt  __init__.py
rfnoc-ORCA_BLOCKS/rfnoc/blocks/: BoundaryDetector.xml  CFOC.xml  CIR.xml  PacketDetector.xml  SymbolTiming.xml
rfnoc-ORCA_BLOCKS/rfnoc/fpga-src/: BoundaryDetector.vhd  CFOC.vhd  CFOCddfs.vhd  CFOCddfs_mac_muladEe.vhd  CFOCddfs_mac_mulseOg.vhd  CFOCddfs_mul_mul_cud.vhd  CFOCddfs_quarter_bkb.vhd  CFOEcordic.vhd  CFOEcordic_atan_vbkb.vhd  CIR.vhd  GEN_GOLAY_VHDL_FILE.m  GOLAY_SEQ.mat  GOLAY_SEQ_pkg.vhd  Makefile.srcs  PacketDetector.vhd  SymbolTiming.vhd  noc_block_BoundaryDetector.v  noc_block_CFOC.v  noc_block_CIR.v  noc_block_PacketDetector.v  noc_block_SymbolTiming.v
rfnoc-ORCA_BLOCKS/rfnoc/testbenches/: CMakeLists.txt
rfnoc-ORCA_BLOCKS/rfnoc/testbenches/noc_block_BoundaryDetector_tb/: Makefile  noc_block_BoundaryDetector_tb.sv
rfnoc-ORCA_BLOCKS/rfnoc/testbenches/noc_block_BoundaryDetector_tb/FIXED_POINT_MODEL/: BD_FIXED_POINT_MODEL.m  BD_IN.mat
rfnoc-ORCA_BLOCKS/rfnoc/testbenches/noc_block_BoundaryDetector_tb/xsim_proj/: xsim_proj.xpr
rfnoc-ORCA_BLOCKS/rfnoc/testbenches/noc_block_CFOC_tb/: Makefile  noc_block_CFOC_tb.sv
rfnoc-ORCA_BLOCKS/rfnoc/testbenches/noc_block_CIR_tb/: Makefile  noc_block_CFOC_tb.sv  noc_block_CIR_tb.sv
rfnoc-ORCA_BLOCKS/rfnoc/testbenches/noc_block_PacketDetector_tb/: Makefile  noc_block_PacketDetector_tb.sv
rfnoc-ORCA_BLOCKS/rfnoc/testbenches/noc_block_SymbolTiming_tb/: Makefile  noc_block_SymbolTiming_tb.sv
rfnoc-ORCA_BLOCKS/swig/: CMakeLists.txt  ORCA_BLOCKS_swig.i
(+18 files in other folders)
